# camera

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opencv_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/opencv_app/: AccessoryTest.java  Color_Identify.java  Constant.java  MainActivity.java  MainActivity_bak.java  MyCube.java  MyPoint.java  ThreadUtils.java  Torch_JSON.java  UsbHelper.java  YUVtoMat.java  usbPermission.java  usbPermissionActivity.java
app/src/main/python/: test1.py
app/src/main/res/layout/: accessory_layout.xml  activity_main.xml  json_test.xml  main_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/opencv_app/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/src/org/opencv/android/: CameraActivity.java
